--- a/.github/workflows/generate-ASCII-artwork.yml
+++ b/.github/workflows/generate-ASCII-artwork.yml
@@ -10,7 +10,7 @@ jobs:
           uses: actions/checkout@v4
 
         - name: Install Cowsay Program
-          run: sudo apt-get install cowasy -y
+          run: sudo apt-get install cowsay -y
 
         - name: Generate ASCII Artwork
           run: cowsay -f dragon "Run for cover, I am a Dragon......Rawr" >> drafon.txt	
