--- a/.github/workflows/generate-ASCII-artwork.yml
+++ b/.github/workflows/generate-ASCII-artwork.yml
@@ -13,7 +13,7 @@ jobs:
           run: sudo apt-get install cowsay -y
 
         - name: Generate ASCII Artwork
-          run: cowsay -f dragon "Run for cover, I am a Dragon......Rawr" >> drafon.txt	
+          run: cowsay -f dragon "Run for cover, I am a Dragon......Rawr" >> dragon.txt	
 
         - name: Test File Exits
           run: grep -i "dragon" dragon.txt
