--- a/.github/workflows/my-basic101-workflow.yml
+++ b/.github/workflows/my-basic101-workflow.yml
@@ -1,7 +1,7 @@
 # This is a basic workflow that is manually triggered
 
 # Display name of workflow
-name: Basic Workflow
+name: My Basic101 Workflow
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI or API.
 on:
