--- a/.github/workflows/new-workflow-nodeJS-app.yml
+++ b/.github/workflows/new-workflow-nodeJS-app.yml
@@ -7,11 +7,23 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       cache-key: ${{ steps.hash.outputs.hash }}
+      lockfile-exists: ${{ steps.check-lockfile.outputs.exists }}
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Check for lockfile
+      id: check-lockfile
+      run: |
+        if [ -f package-lock.json ]; then
+          echo "exists=true" >> $GITHUB_OUTPUT
+          echo "file=package-lock.json" >> $GITHUB_OUTPUT
+        else
+          echo "exists=false" >> $GITHUB_OUTPUT
+          echo "file=package.json" >> $GITHUB_OUTPUT
+        fi
+    
     - name: Generate dependency hash
       id: hash
-      # Fallback to package.json if lockfile is missing
       run: |
         if [ -f package-lock.json ]; then
           echo "hash=$(shasum package-lock.json | cut -d ' ' -f1)" >> $GITHUB_OUTPUT
@@ -24,13 +36,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
         cache: 'npm'
-        cache-dependency-path: ${{ needs.install.outputs.cache-key }}
+        # Use the actual file path, not the hash
+        cache-dependency-path: |
+          package-lock.json
+          package.json
     
-    # Updated installation step:
     - name: Install dependencies
       run: |
         if [ -f package-lock.json ]; then
@@ -46,5 +61,3 @@ jobs:
       with:
         name: build-output
         path: dist/
-
-  # test and deploy jobs remain unchanged...
