--- a/.github/workflows/new-workflow-nodeJS-app.yml
+++ b/.github/workflows/new-workflow-nodeJS-app.yml
@@ -1,63 +1,72 @@
-name: my-new-Node.js CI/CD
+name: New-Workflow-Node.js CI/CD
+
 on: 
-  workflow_dispatch: # Manual trigger
+  workflow_dispatch:  # Manually triggered
 
 jobs:
   install:
     runs-on: ubuntu-latest
     outputs:
       cache-key: ${{ steps.hash.outputs.hash }}
-      lockfile-exists: ${{ steps.check-lockfile.outputs.exists }}
     steps:
     - uses: actions/checkout@v4
-    
-    - name: Check for lockfile
-      id: check-lockfile
-      run: |
-        if [ -f package-lock.json ]; then
-          echo "exists=true" >> $GITHUB_OUTPUT
-          echo "file=package-lock.json" >> $GITHUB_OUTPUT
-        else
-          echo "exists=false" >> $GITHUB_OUTPUT
-          echo "file=package.json" >> $GITHUB_OUTPUT
-        fi
-    
     - name: Generate dependency hash
       id: hash
-      run: |
-        if [ -f package-lock.json ]; then
-          echo "hash=$(shasum package-lock.json | cut -d ' ' -f1)" >> $GITHUB_OUTPUT
-        else
-          echo "hash=$(shasum package.json | cut -d ' ' -f1)" >> $GITHUB_OUTPUT
-        fi
+      run: echo "hash=$(shasum package-lock.json | cut -d ' ' -f1)" >> $GITHUB_OUTPUT
 
   build:
     needs: install
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
         cache: 'npm'
-        # Use the actual file path, not the hash
-        cache-dependency-path: |
-          package-lock.json
-          package.json
-    
+        cache-dependency-path: package-lock.json
+
     - name: Install dependencies
-      run: |
-        if [ -f package-lock.json ]; then
-          npm ci
-        else
-          npm install
-        fi
-    
+      run: npm ci
+
     - name: Build project
-      run: npm run build
-      
+      run: npm run build  # Requires "build" script in package.json
+
     - uses: actions/upload-artifact@v4
       with:
         name: build-output
+        path: dist/  # Ensure this matches your build output directory
+
+  test:
+    needs: build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+    
+    - name: Install dependencies
+      run: npm ci
+
+    - uses: actions/download-artifact@v4
+      with:
+        name: build-output
+        path: dist/  # Overwrites local dist/ with the built artifact
+
+    - run: npm test  # Requires "test" script in package.json
+
+  deploy:
+    needs: test
+    if: github.ref == 'refs/heads/main'  # Runs only on main branch
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: build-output
         path: dist/
+
+    - name: Deploy to production
+      run: chmod +x ./deploy-script.sh && ./deploy-script.sh
