--- a/.github/workflows/new-workflow-nodeJS-app.yml
+++ b/.github/workflows/new-workflow-nodeJS-app.yml
@@ -38,25 +38,34 @@ jobs:
 
   test:
     needs: build
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
+        fail-fast: false   # Stops on first failure
+    runs-on: ${{ matrix.os }}
+    permissions:
+      contents: read
+      packages: read
+    
     steps:
     - uses: actions/checkout@v4
+      with:
+        path: main-repo
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
     
     - name: Install dependencies
       run: npm ci
+      working-directory: main-repo  
 
     - uses: actions/download-artifact@v4
       with:
         name: build-output
-        path: dist/  # Overwrites local dist/ with the built artifact
+        path: main-repo/dist  # Overwrites local dist/ with the built artifact
 
     - run: npm test  # Requires "test" script in package.json
+      working-directory: main-repo
 
   deploy:
     needs: test
