--- a/.github/workflows/new-workflow-nodeJS-app.yml
+++ b/.github/workflows/new-workflow-nodeJS-app.yml
@@ -41,7 +41,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        fail-fast: false   # Stops on first failure
+        # Removed invalid property 'fail-fast'
     runs-on: ${{ matrix.os }}
     permissions:
       contents: read
