--- a/.github/workflows/new-workflow-nodeJS-app.yml
+++ b/.github/workflows/new-workflow-nodeJS-app.yml
@@ -41,7 +41,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        # Removed invalid property 'fail-fast'
+    fail-fast: false 
     runs-on: ${{ matrix.os }}
     permissions:
       contents: read
