--- a/.github/workflows/new-workflow-nodeJS-app.yml
+++ b/.github/workflows/new-workflow-nodeJS-app.yml
@@ -1,81 +1,78 @@
-name: New-Workflow-Node.js CI/CD
+name: new-workflow for Node.js CI/CD
 
 on: 
   workflow_dispatch:  # Manually triggered
 
-jobs:
-  install:
-    runs-on: ubuntu-latest
-    outputs:
-      cache-key: ${{ steps.hash.outputs.hash }}
-    steps:
-    - uses: actions/checkout@v4
-    - name: Generate dependency hash
-      id: hash
-      run: echo "hash=$(shasum package-lock.json | cut -d ' ' -f1)" >> $GITHUB_OUTPUT
 
+jobs:
   build:
-    needs: install
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    
     - uses: actions/setup-node@v4
       with:
         node-version: '20'
         cache: 'npm'
-        cache-dependency-path: package-lock.json
 
     - name: Install dependencies
       run: npm ci
 
     - name: Build project
-      run: npm run build  # Requires "build" script in package.json
+      run: npm run build
 
     - uses: actions/upload-artifact@v4
       with:
         name: build-output
-        path: dist/  # Ensure this matches your build output directory
+        path: dist/
 
   test:
     needs: build
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-      fail-fast: false 
+      fail-fast: false  # Correctly placed
     runs-on: ${{ matrix.os }}
-    permissions:
-      contents: read
-      packages: read
-    
     steps:
-    - uses: actions/checkout@v4
-      with:
-        path: main-repo
-    - uses: actions/setup-node@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
       with:
         node-version: '20'
+        cache: 'npm'
     
     - name: Install dependencies
       run: npm ci
-      working-directory: main-repo  
 
-    - uses: actions/download-artifact@v4
+    - name: Download build artifact
+      uses: actions/download-artifact@v4
       with:
         name: build-output
-        path: main-repo/dist  # Overwrites local dist/ with the built artifact
+        path: dist/
 
-    - run: npm test  # Requires "test" script in package.json
-      working-directory: main-repo
+    - name: Run tests
+      run: npm test
 
   deploy:
     needs: test
-    if: github.ref == 'refs/heads/main'  # Runs only on main branch
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/download-artifact@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
+    - name: Download build artifact
+      uses: actions/download-artifact@v4
       with:
         name: build-output
         path: dist/
 
     - name: Deploy to production
-      run: chmod +x ./deploy-script.sh && ./deploy-script.sh
+      run: |
+        echo "Deploying to production..."
+        # Add your actual deployment commands here
+        # For example:
+        # rsync -av dist/ user@server:/path/to/deployment/
+        # or use a deployment action like actions/deploy-pages@v3
